<resources>
    <string name="app_name">SportSquare</string>
    <string name="login_title_text">LOGIN</string>
    <string name="signup_title_text">SIGN UP</string>


    <string name="text_toLoginActivity">To Loging Activity</string>

    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="username">Username</string>


    <string name="signup_email_text">Type your email</string>
    <string name="signup_password_text">Type new password</string>
    <string name="signup_reptype_password_text">Retype password</string>

    <string name="forgot_pass">Did you forgot your password?</string>
    <string name="or_text">OR</string>
    <string name="title_activity_establishment_sign_up">Sign Up</string>

    <string name="estbContactTitle">Establishment Contact Info</string>
    <string name="estbContactPhone">Contact phone</string>
    <string name="estbContactEmail">Contact email</string>
    <string name="estbSocialNetworks">Social Networks</string>

    <string name="estbSignupTitle">Establishment SignUp</string>
    <string name="estbName">Establishment name</string>

    <string name="finish">Finish</string>
    <string name="next">Next</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_contact_form">Establishment Contact Info</string>

    <string name="pass_recovery_title">Password Recovery</string>
    <string name="pass_recovery_button">Recover password</string>
    <string name="cancel_text">Cancel</string>
    <string name="signup_username">new username</string>
    <string name="signup_name">type your name</string>
    <string name="signup_admintextaccount">This will be an Admin account</string>
    <string name="logout">Logout</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="i_want_to_receive_email_news">I want to receive email news</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="insert_email_to_send_the_invitation">Insert email to send the invitation</string>
    <string name="cancel">CANCEL</string>
    <string name="send">SEND</string>
    <string name="invitation_title">TITLE</string>
    <string name="invitation_email_subject">TITLE</string>
    <string name="invitation_email_html_content"><![CDATA[<!DOCTYPE html>
<html>
    <body>
        <div>
            <a href="%%APPINVITE_LINK_PLACEHOLDER%%">Install My App</a>
        </div>
    </body>
</html>]]></string>
    <string name="app_link">https://wpbw6.app.goo.gl/rniX</string>
    <string name="edit_info">Edit INFO</string>
    <string name="user">User</string>
    <string name="get_email_news">Get Email News</string>
    <string name="save_changes">Save changes</string>
    <string name="current_username">Current Username:</string>
    <string name="current_full_name">Current Full Name:</string>
    <string name="email_news">Email News:</string>

</resources>
