<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:text="@string/current_username"
        android:id="@+id/tv_currentUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_theCurrentUSERNAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_currentUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/current_full_name"
        android:id="@+id/tv_currentFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_theCurrentFULLNAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_currentFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/email_news"
        android:id="@+id/tv_currentGetNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/get_email_news"
        android:id="@+id/cb_currentNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/save_changes"
        android:id="@+id/btn_currentSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>