<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.iteso.sportsquare.EstablishmentSignUp">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvEstbSignUpTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/estbSignupTitle"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEstbEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvEstbSignUpTitle"/>

            <EditText
                android:id="@+id/etEstbUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/username"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintTop_toBottomOf="@+id/etEstbEmail" />

            <EditText
                android:id="@+id/etEstbName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/estbName"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintTop_toBottomOf="@+id/etEstbUsername" />

            <EditText
                android:id="@+id/etEstbPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintTop_toBottomOf="@+id/etEstbName" />

            <EditText
                android:id="@+id/etEstbRepassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/signup_reptype_password_text"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintTop_toBottomOf="@+id/etEstbPassword" />

            <Button
                android:id="@+id/btnEstbSignup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintStart_toStartOf="@+id/tvEstbSignUpTitle"
                app:layout_constraintTop_toBottomOf="@+id/etEstbRepassword" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>
