<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.iteso.sportsquare.ContactForm">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvEstbContactTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/estbContactTitle"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/etEstbContactEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/estbContactEmail"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbContactTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvEstbContactTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvEstbContactTitle"/>

            <EditText
                android:id="@+id/etEstbPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/estbContactPhone"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbContactTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvEstbContactTitle"
                app:layout_constraintTop_toBottomOf="@+id/etEstbContactEmail" />

            <EditText
                android:id="@+id/etEstbSocialNetworks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/estbSocialNetworks"
                android:inputType="textUri"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbContactTitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvEstbContactTitle"
                app:layout_constraintTop_toBottomOf="@+id/etEstbPhone" />

            <Button
                android:id="@+id/btnEstbContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/finish"
                app:layout_constraintEnd_toEndOf="@+id/tvEstbContactTitle"
                app:layout_constraintStart_toStartOf="@+id/tvEstbContactTitle"
                app:layout_constraintTop_toBottomOf="@+id/etEstbSocialNetworks" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</LinearLayout>
