<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSignupTitle"
        android:text="@string/signup_title_text"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/tvSignupUsername"
        android:text="@string/signup_username_text"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>


    <EditText
        android:id="@+id/etSignupUsername"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/tvSignupPassword"
        android:text="@string/signup_password_text"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/etSignupPassword"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/tvRetypePass"
        android:text="@string/signup_reptype_password_text"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/etRetypePass"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>

    <Button
        android:id="@+id/btnSignup"
        android:text="@string/signup_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>



</LinearLayout>